[general] Fix table width break in some browser

--- a/src/app/sega/chunithm/amazon/amazon-recent/amazon-recent.component.css
+++ b/src/app/sega/chunithm/amazon/amazon-recent/amazon-recent.component.css
@@ -39,6 +39,10 @@
   margin: auto;
 }
 
+.result-content .right {
+  width: 100%;
+}
+
 .achievement-value {
   font-size: 1.5rem;
 }
