--- a/src/app/sega/diva/diva-recent/diva-recent.component.css
+++ b/src/app/sega/diva/diva-recent/diva-recent.component.css
@@ -30,6 +30,10 @@ mat-card-title {
   margin: auto;
 }
 
+.result-content .right {
+  width: 100%;
+}
+
 .rank {
   font-size: 1rem;
 }
